--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -71,7 +71,7 @@ linter:
     prefer_is_not_empty: true
     prefer_iterable_whereType: true
     prefer_null_aware_operators: true
-    # prefer_single_quotes: true
+    # prefer_single_quotes: fal
     prefer_spread_collections: true
     prefer_typing_uninitialized_variables: true
     recursive_getters: true
